--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <turbo-frame id="main-turbo" target="_top">
-  <div class="container-login max-w-md mx-auto p-6 mt-20">
+  <div class="container-login max-w-md mx-auto p-6">
     <h1 class="text-4xl font-bold text-center text-white mb-6">wander</h1>
     <div class="form-login">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
