--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -3,7 +3,7 @@
   <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
 
   <div class="flex flex-col justify-center items-center z-10 h-screen w-screen">
-    <div class="relative text-white px-20">
+    <div class="relative text-white px-12">
       <div class="flex items-center mb-4 space-x-2">
         <span class="text-xs font-medium uppercase tracking-wide bg-orange-500 text-white px-3 py-1 rounded-full">
           Votre destination
@@ -21,19 +21,19 @@
       <div class="flex flex-col mt-12 text-gray-200 leading-relaxed gap-3">
         <div class="text-sm">
           <span class="flex items-center gap-3"><span class="icon icon-20">paid</span><strong>Devise</strong></span>
-          <div class="ml-8 text-xs"><%= trip.destination.currency %></div>
+          <div class="ml-8 text-sm"><%= trip.destination.currency %></div>
         </div>
         <div class="text-sm">
           <span class="flex items-center gap-3"><span class="icon icon-20">badge</span><strong>Documents nécessaires</strong></span>
-          <div class="ml-8 text-xs"><%= trip.destination.papers %></div>
+          <div class="ml-8 text-sm"><%= trip.destination.papers %></div>
         </div>
         <div class="text-sm">
           <span class="flex items-center gap-3"><span class="icon icon-20">lunch_dining</span><strong>Spécialités culinaires</strong></span>
-          <div class="ml-8 text-xs"><%= trip.destination.food %></div>
+          <div class="ml-8 text-sm"><%= trip.destination.food %></div>
         </div>
         <div class="text-sm">
           <span class="flex items-center gap-3"><span class="icon icon-20">power</span><strong>Type de prise électrique</strong></span>
-          <div class="ml-8 text-xs"><%= trip.destination.power %></div>
+          <div class="ml-8 text-sm"><%= trip.destination.power %></div>
         </div>
       </div>
     </div>
