--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -12,7 +12,7 @@
 
       <h1 class="text-5xl font-bold font-playfair"><%= trip.name %></h1>
 
-      <div class="flex items-center mt-2 space-x-2 text-sm text-gray-300">
+      <div class="flex items-center space-x-2 text-sm text-gray-300">
         <span class="icon">explore</span>
         <span><%= trip.destination.address %></span>
       </div>
